--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const permalink = Astro.site.href;
 <BaseLayout title={title} description={description} permalink={permalink}>
   <div class="home-container">
     <div class="home-copy">
-      <h1>Welcome to the Adam Worleys <a href="/blog">Wordley Blog</a></h1>
+      <h1>Welcome to the <a href="/blog">Wordley Blog</a></h1>
       <!-- <p>Check out the docs on <a href="https://www.github.com/Charca/astro-blog-template" target="_blank" rel="noopener">GitHub</a> to get started.</p> -->
     </div>
 
