--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -40,8 +40,8 @@ const socialUrl = Astro.site.href + 'assets/social.png'
 <!-- This is intentionally inlined to avoid FOUC -->
 <script>
   const root = document.documentElement;
-  const theme = localStorage.getItem('theme');
-  if (theme === 'dark' || (!theme) && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  const darkModeEnabled = localStorage.getItem('darkModeEnabled');
+  if (darkModeEnabled || (!darkModeEnabled) && window.matchMedia('(prefers-color-scheme: dark)').matches) {
     root.classList.add('theme-dark');
   } else {
     root.classList.remove('theme-dark');
