--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,14 +4,14 @@
   --text-secondary: #6b6f72;
   --primary-color: #548e9b;
   --font-family-serif: Merriweather, serif;
-  --font-family-sans: 'Fira Sans', sans-serif;
+  --font-family-sans: "Fira Sans", sans-serif;
 }
 
 :root.theme-dark {
   --background-body: #202122;
   --text-main: #fff;
   --text-secondary: #ccc;
-  --primary-color: #548e9b;
+  --primary-color: #548e9b; /* #f6ad55 */
 }
 
 *,
@@ -127,7 +127,7 @@ hr {
 }
 
 code {
-  font-family: 'SF Mono', menlo, inconsolata, monospace;
+  font-family: "SF Mono", menlo, inconsolata, monospace;
   font-size: calc(1em - 2px);
   color: #555;
   padding: 0.2em 0.4em;
@@ -234,7 +234,7 @@ td {
   opacity: 1;
 }
 
-input[name='theme-toggle'] {
+input[name="theme-toggle"] {
   position: absolute;
   opacity: 0;
   top: 0;
