--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,6 +113,26 @@ p a:hover {
   color: #fff;
 }
 
+p > img {
+  margin: auto;
+  display: block;
+}
+
+.youtube {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 img {
   max-width: 100%;
   height: auto;
