--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -33,6 +33,23 @@ const permalink = `${Astro.site.href}${slug}`;
       <Content />
     </article>
     <hr />
+    <script src="https://giscus.app/client.js"
+            data-repo="AdamWorley/Blog"
+            data-repo-id="R_kgDOIcQuRw"
+            data-category="Announcements"
+            data-category-id="DIC_kwDOIcQuR84CXvRW"
+            data-mapping="pathname"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="preferred_color_scheme"
+            data-lang="en"
+            data-loading="lazy"
+            crossorigin="anonymous"
+            async>
+    </script>
+    <hr />
     <Bio />
   </div>
 </BaseLayout>
