--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,6 +2,7 @@
 import Bio from "../../components/Bio.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import getPostData from "../../utils/getPostData";
+import Comments from '../../components/Comments.svelte';
 
 export async function getStaticPaths() {
   const posts = await Astro.glob("../../data/blog-posts/*.{md,mdx}");
@@ -29,26 +30,11 @@ const permalink = `${Astro.site.href}${slug}`;
     <hr />
   </header>
   <div class="container">
-    <article class="content">
+    <article class="content">      
       <Content />
     </article>
     <hr />
-    <script src="https://giscus.app/client.js"
-            data-repo="AdamWorley/Blog"
-            data-repo-id="R_kgDOIcQuRw"
-            data-category="Announcements"
-            data-category-id="DIC_kwDOIcQuR84CXvRW"
-            data-mapping="pathname"
-            data-strict="0"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-input-position="top"
-            data-theme="preferred_color_scheme"
-            data-lang="en"
-            data-loading="lazy"
-            crossorigin="anonymous"
-            async>
-    </script>
+<Comments client:load />
     <hr />
     <Bio />
   </div>
