--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,15 +6,14 @@ import Footer from '../components/Footer.astro';
 export interface Props {
   title: string;
   description: string;
-  permalink: string;
   current?: string;
 }
 
-const { title, description, permalink, current } = Astro.props;
+const { title, description, current } = Astro.props;
 ---
 <html lang="en" >
 <head>
-  <BaseHead title={title} description={description} permalink={permalink} />
+  <BaseHead title={title} description={description} />
 </head>
 <body>
   <div class="layout">
