fix reading time

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,9 +19,9 @@ const socialUrl = Astro.site!.href + 'assets/social.png'
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="assets/fonts/u-4n0qyriQwlOrhSvowK_l52xwNZWMf6hPvhPQ.woff2" as="font" type="font/woff" crossorigin />
+<!-- <link rel="preload" href="assets/fonts/u-4n0qyriQwlOrhSvowK_l52xwNZWMf6hPvhPQ.woff2" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="assets/fonts/u-440qyriQwlOrhSvowK_l5-fCZMdeX3rg.woff2" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="assets/fonts/va9B4kDNxMZdWfMOD5VnLK3eRhf6Xl7Glw.woff2" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="assets/fonts/va9B4kDNxMZdWfMOD5VnLK3eRhf6Xl7Glw.woff2" as="font" type="font/woff" crossorigin /> -->
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
