--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 import Bio from "../../components/Bio.astro";
 import Comments from "../../components/Comments.svelte";
+import FormattedDate from '../../components/FormattedDate.astro';
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
@@ -14,7 +15,7 @@ export async function getStaticPaths() {
 
 const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
-const { title, description, publishDate } = remarkPluginFrontmatter;
+const { title, description } = remarkPluginFrontmatter;
 ---
 
 <BaseLayout
@@ -23,7 +24,7 @@ const { title, description, publishDate } = remarkPluginFrontmatter;
   current="blog"
 >
   <header>
-    <p>{publishDate} ~ {remarkPluginFrontmatter.minutesRead}</p>
+    <p><FormattedDate date={entry.data.publishDate} /> ~ {remarkPluginFrontmatter.minutesRead}</p>
     <h1>{title}</h1>
     <hr />
   </header>
