--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import FormattedDate from '../../components/FormattedDate.astro';
 
 const title = "Blog";
 const description = "Latest articles.";
@@ -11,8 +12,8 @@ let allPosts = await getCollection("blog", ({ data }) => {
 
 allPosts = allPosts.sort(
   (a, b) =>
-    new Date(b.data.publishDate).valueOf() -
-    new Date(a.data.publishDate).valueOf()
+    b.data.publishDate.valueOf() -
+    a.data.publishDate.valueOf()
 );
 ---
 
@@ -35,7 +36,7 @@ allPosts = allPosts.sort(
               </h2>
               <p>{post.data.description}</p>
               <div class="post-item-footer">
-                <span class="post-item-date">— {post.data.publishDate}</span>
+                <span class="post-item-date">— <FormattedDate date={post.data.publishDate} /></span>
               </div>
             </div>
           </div>
