--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -30,8 +30,8 @@ allPosts = allPosts.sort(
         return (
           <div>
             {index !== 0 && <hr />}
-            <div class="post-item">
-              <h2>
+            <div class="post-item" transition:name={post.slug}>
+              <h2 >
                 <a href={href}>{post.data.title}</a>
               </h2>
               <p>{post.data.description}</p>
